--- a/olimpiadas/cliente/views/listaDestinos.ejs
+++ b/olimpiadas/cliente/views/listaDestinos.ejs
@@ -39,6 +39,7 @@
 </nav>
 
 <body>
+    <a href="/altaDestino" role="button" class="btn btn-outline-secondary">Agregar</a>
     <table class="table table-success table-striped">
         <thead>
             <tr>
