--- a/olimpiadas/cliente/views/listaExcursiones.ejs
+++ b/olimpiadas/cliente/views/listaExcursiones.ejs
@@ -40,7 +40,7 @@
 
 <body>
     <div>
-        <a href="/altaExcursion">Agregar</a>
+        <a href="/altaExcursion" role="button" class="btn btn-outline-secondary">Agregar</a>
         <table class="table table-success table-striped">
             <thead>
                 <tr>
@@ -67,8 +67,8 @@
                             <%=excursion.precio%>
                         </td>
                         <td>
-                            <a href="/editarExcursion/<%=excursion.id%>">Editar</a>
-                            <a href="/eliminarExcursion/<%=excursion.id%>">Eliminar</a>
+                            <a href="/editarExcursion/<%=excursion.id%>" role="button" class="btn btn-outline-secondary">Editar</a>
+                            <a href="/eliminarExcursion/<%=excursion.id%>" role="button" class="btn btn-outline-secondary">Eliminar</a>
                         </td>
                     </tr>
                     <%})%>
