--- a/olimpiadas/cliente/views/panelAdmin.ejs
+++ b/olimpiadas/cliente/views/panelAdmin.ejs
@@ -28,7 +28,7 @@
     </div>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <!-- Botón para iniciar sesión -->
-        <button class="btn me-md-2" style="background-color: #EFA937;" type="button">Usuario</button>
+        
     </div>
 </header>
 
@@ -41,7 +41,7 @@
 
 
 <body>
-    <div class="container text-center">
+    <div class="container text-center m-5">
         <br>
         <h1>Panel Administrativo</h1>
         <br>
