--- a/olimpiadas/cliente/views/register.ejs
+++ b/olimpiadas/cliente/views/register.ejs
@@ -47,39 +47,39 @@
             <div class="col-7" style="margin-top: 20px; margin-bottom: 20px;">
                 <!-- Sección del formulario con campos de entrada para correo, contraseña y confirmación de contraseña -->
                 <form action="/register" method="post">
-                    <label for="inputPassword5" class="form-label">Nombre</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Nombre</label>
                     <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="nombre">
                     <br>
-                    <label for="inputPassword5" class="form-label">Apellido</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Apellido</label>
                     <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="apellido">
                     <br>
-                    <label for="inputPassword5" class="form-label">Telefono</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Telefono</label>
                     <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="telefono">
 
 
-                    <br><label for="inputPassword5" class="form-label">Direccion</label>
+                    <br><label for="inputPassword5" class="form-label" style="color: white;">Direccion</label>
                     <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="direccion">
 
 
                     <br>
-                    <label for="inputPassword5" class="form-label">Zona</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Zona</label>
                     <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="password">
 
 
                     <br>
-                    <label for="inputPassword5" class="form-label">Correo</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Correo</label>
                     <input type="email" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                         name="email">
 
 
                     <br>
 
-                    <label for="inputPassword5" class="form-label">Contraseña</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Contraseña</label>
                     <input type="password" id="inputPassword5" class="form-control"
                         aria-describedby="passwordHelpBlock">
 
