--- a/olimpiadas/cliente/views/index.ejs
+++ b/olimpiadas/cliente/views/index.ejs
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Página Principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="public/css/estilos.css">
 </head>
 
 <body>
 <header class="p-3 border-bottom d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-        <img id="logo" src="/ruta-a-tu-logo.png" alt="logo" style="height: 50px; margin-right: 10px;">
+        <img id="logo" src="public/img/logopro.png" alt="logo" style="height: 50px; margin-right: 10px;">
         <h1 class="h4 m-0">Nombre del Sitio</h1>
     </div>
 
@@ -48,7 +48,7 @@
         <% paquetes.forEach((paquete) => { %>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
-                    <img src="/ruta-a-imagen.jpg" class="card-img-top" alt="Imagen del paquete">
+                    
                     <div class="card-body">
                         
                         <h5 class="card-title"><%= paquete.nombre %></h5>
