--- a/olimpiadas/cliente/views/login.ejs
+++ b/olimpiadas/cliente/views/login.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesión</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="public/css/estilos.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
@@ -19,7 +19,7 @@
 <header>
     <!-- Encabezado de la página -->
     <div style="display: flex;">
-        <img id="logo" src="logopro.png" alt="logo">
+        <img id="logo" src="public/img/logopro.png" alt="logo">
         <h1> Nombre </h1><!-- Espacio para un logo y nombre de la empresa -->
     </div>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
@@ -43,14 +43,14 @@
                 style="border-radius: 20px; margin-top: 20px; margin-bottom: 20px;">
                 <!-- Sección del formulario de inicio de sesión con un fondo azul, bordes redondeados y márgenes -->
                 <div class="col-4">
-                    <img src="silson.jpeg" class="img-fluid rounded-start"
+                    <img src="./agencia-de-viajes.jpg" class="img-fluid rounded-start"
                         style="margin-top: 20px; margin-bottom: 20px;">
                     <!-- Imagen en la parte izquierda del formulario, con bordes redondeados -->
                 </div>
 
                 <div class="col-7" style="margin-top: 20px; margin-bottom: 20px;">
                     <!-- Sección del formulario con campos de entrada para correo, contraseña y confirmación de contraseña -->
-                    <label for="inputPassword5" class="form-label">Correo</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Correo</label>
                     <input type="email" id="inputPassword5" class="form-control"
                         aria-describedby="passwordHelpBlock" name="email">
                     <div id="passwordHelpBlock" class="form-text">
@@ -59,7 +59,7 @@
 
                     <br>
 
-                    <label for="inputPassword5" class="form-label">Contraseña</label>
+                    <label for="inputPassword5" class="form-label" style="color: white;">Contraseña</label>
                     <input type="password" id="inputPassword5" class="form-control"
                         aria-describedby="passwordHelpBlock" name="password">
                     <div id="passwordHelpBlock" class="form-text">
@@ -68,12 +68,7 @@
 
                     <br>
 
-                    <label for="inputPassword5" class="form-label">Confirmar Contraseña</label>
-                    <input type="password" id="inputPassword5" class="form-control"
-                        aria-describedby="passwordHelpBlock">
-                    <div id="passwordHelpBlock" class="form-text">
-                        <!-- Texto de ayuda para la contraseña (puede ser vacío) -->
-                    </div>
+                   
                 </div>
             </div>
 
