--- a/olimpiadas/cliente/views/personalizarPaquete.ejs
+++ b/olimpiadas/cliente/views/personalizarPaquete.ejs
@@ -1,32 +1,11 @@
-<form action="/guardarExtras" method="post">
 
-    <input type="hidden" name="id_detalle" value="<%=detalle.id%>">
-
-    <p>Renta de un auto</p>
-    <select name="id_auto">
-        <%autos.forEach((auto)=>{%>
-            <option value="<%=auto.id%>">
-                <%=auto.marca%>
-                    <%=auto.modelo%>
-            </option>
-            <%})%>
-    </select>
-    <p>Excursiones</p>
-    <select name="id_excursion" id="">
-        <%excursiones.forEach((excursion)=>{%>
-            <option value="<%=excursion.id%>">
-                <%=excursion.nombre%>
-                    <%=excursion.precio%>
-            </option>
-            <%})%>
-    </select>
     <!DOCTYPE html>
     <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Autos</title>
+        <title>Personalizar paquete</title>
         <link rel="stylesheet" href="estilos.css">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,7 +28,7 @@
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <!-- Botón para iniciar sesión -->
-            <button class="btn me-md-2" style="background-color: #EFA937;" type="button">Usuario</button>
+            
         </div>
     </header>
 
@@ -65,32 +44,32 @@
         <div class="container text-center">
             <form action="/guardarExtras" method="post">
 
-                <input type="hidden" name="id_detalle" value="<%=detalle.id%>">
+                <input type="hidden" name="id_detalle" value="<%=detalle.id%>" >
 
                 <p>Renta de un auto</p>
-                <select name="id_auto">
+                <select name="id_auto" class="form-select">
                     <%autos.forEach((auto)=>{%>
                         <option value="<%=auto.id%>">
                             <%=auto.marca%>
-                                <%=auto.modelo%>
+                                <%=auto.modelo%>  $<%=auto.precio%> 
                         </option>
                         <%})%>
                 </select>
                 <p>Excursiones</p>
-                <select name="id_excursion" id="">
+                <select name="id_excursion" id="" class="form-select">
                     <%excursiones.forEach((excursion)=>{%>
                         <option value="<%=excursion.id%>">
                             <%=excursion.nombre%>
-                                <%=excursion.precio%>
+                                 $<%=excursion.precio%>
                         </option>
                         <%})%>
                 </select>
 
-                <input type="submit" value="Guardar cambios">
+                <input type="submit" value="Guardar cambios" role="button" class="btn btn-primary">
             </form>
         </div>
     </body>
 
     </html>
-    <input type="submit" value="Guardar cambios">
+    
 </form>
